# incubator-horaedb

./: Cargo.toml  print.html  searchindex.js  searchindex.json
.github/workflows/: benchmark-tsbs.yml
analytic_engine/: Cargo.toml
analytic_engine/src/: lib.rs  setup.rs  table_meta_set_impl.rs
analytic_engine/src/compaction/: picker.rs  scheduler.rs
analytic_engine/src/instance/: create.rs  flush_compaction.rs  mod.rs  open.rs  read.rs  reorder_memtable.rs  serial_executor.rs  write.rs
analytic_engine/src/manifest/: details.rs
analytic_engine/src/memtable/: factory.rs  mod.rs  reversed_iter.rs  test_util.rs
analytic_engine/src/row_iter/: chain.rs  (+5 more)
arrow_deps/: Cargo.toml
benchmarks/: Cargo.toml
benchmarks/src/: hybrid_bench.rs  lib.rs  merge_memtable_bench.rs  merge_sst_bench.rs  parquet_bench.rs  scan_memtable_bench.rs  sst_bench.rs  sst_tools.rs  util.rs
common_types/: Cargo.toml
common_types/src/: column.rs  projected_schema.rs  record_batch.rs  schema.rs  tests.rs  time.rs
components/table_kv/: Cargo.toml
dev/: roadmap.html
interpreters/: Cargo.toml
interpreters/src/: insert.rs
partition_table_engine/src/: partition.rs
proto/protos/: sst.proto
proxy/src/: lib.rs  read.rs  write.rs
query_engine/src/: context.rs  executor.rs
query_frontend/src/: lib.rs  plan.rs  planner.rs
remote_engine_client/src/: client.rs
server/: Cargo.toml
server/src/: http.rs  server.rs
sql/: Cargo.toml
sql/src/: planner.rs
src/server/: Cargo.toml
system_catalog/src/: sys_catalog_table.rs  tables.rs
table_engine/src/: provider.rs  table.rs
(+47 files in other folders)
